Revised the core Scheme op sem to use the macros.

--- a/macros.tex
+++ b/macros.tex
@@ -105,7 +105,7 @@
 \newcommand{\expfield}[1]{\ensuremath{\formvar{\symfield} \; #1}}
 \newcommand{\exphd}[1]{\ensuremath{\formsym{\symhd} \; #1}}
 \newcommand{\exptl}[1]{\ensuremath{\formsym{\symtl} \; #1}}
-\newcommand{\expnull}[1]{\ensuremath{\formsym{\sympnull} \; #1}}
+\newcommand{\exppnull}[1]{\ensuremath{\formsym{\sympnull} \; #1}}
 \newcommand{\expwrongs}[2]{\ensuremath{\formsym{\symwrong} \; #1 \; #2}}
 \newcommand{\expwrongd}[1]{\ensuremath{\formsym{\symwrong} \; #1}}
 \newcommand{\exphm}[2]{\ensuremath{\formsym{\symhm} \; #1 \; #2}}
