--- a/model/haskell/grammar.tex
+++ b/model/haskell/grammar.tex
@@ -3,7 +3,7 @@
 
 \begin{tabular}{rcl}
 
-\varexph & $=$ & \varvarh $|$ \varvaluh $|$ \expfapp{\varexph}{\varexph} $|$ \exptapp{\varexph}{\vartyh} $|$ \expfix{\varexph} $|$ \expop{\varexph}{\varexph} $|$ \expif{\varexph}{\varexph}{\varexph} $|$ \expfield{\varexph} $|$ \expnull{\varexph} \\
+\varexph & $=$ & \varvarh $|$ \varvaluh $|$ \expfapp{\varexph}{\varexph} $|$ \exptapp{\varexph}{\vartyh} $|$ \expfix{\varexph} $|$ \expop{\varexph}{\varexph} $|$ \expif{\varexph}{\varexph}{\varexph} $|$ \expfield{\varexph} $|$ \exppnull{\varexph} \\
 
 && \expwrongs{\vartyh}{\formvar{string}} $|$ \exphm{\vartyh}{\varexpm} $|$ \exphs{\vartyh}{\varexps} \\
 
@@ -17,7 +17,7 @@
 
 \varconfh & $=$ & \symholeh $|$ \expfapp{\varconfh}{\varexph} $|$ \exptapp{\varconfh}{\vartyh} $|$ \expfix{\varconfh} $|$ \expop{\varconfh}{\varexph} $|$ \expop{\varvaluh}{\varconfh} $|$ \expif{\varconfh}{\varexph}{\varexph} \\
 
-&& \expfield{\varconfh} $|$ \expnull{\varconfh} $|$ \exphm{\vartyh}{\varconfm} $|$ \exphs{\vartyh}{\varconfs}
+&& \expfield{\varconfh} $|$ \exppnull{\varconfh} $|$ \exphm{\vartyh}{\varconfm} $|$ \exphs{\vartyh}{\varconfs}
 
 \end{tabular}
 \caption{Haskell grammar and evaluation contexts}
