--- a/model/haskell/operational-semantics/scheme.tex
+++ b/model/haskell/operational-semantics/scheme.tex
@@ -12,7 +12,8 @@
 
 \redruleh
 {\exphs{\tynum}{\varvalus}}
-{\expwrongs{\tynum}{\str{Not \; a \; number}}} $(\varvalus \neq \expnum{\varnum})$ \\
+{\expwrongs{\tynum}{\str{Not \; a \; number}}}
+$(\varvalus \neq \expnum{\varnum})$ \\
 
 % hs [t] nil
 
@@ -44,7 +45,8 @@
 
 \redruleh
 {\exphs{(\tylabel{\vartyh}{\tyvarh})}{\varvalus}}
-{\expwrongs{\vartyh}{\str{Parametricity \; violated}}} $(\varvalus \neq \expsh{(\tylabel{\vartyh}{\tyvarh})}{\varexph})$ \\
+{\expwrongs{\vartyh}{\str{Parametricity \; violated}}}
+$(\varvalus \neq \expsh{(\tylabel{\vartyh}{\tyvarh})}{\varexph})$ \\
 
 % hs (t->t) (\x.e)
 
