--- a/model/haskell/typing-rules.tex
+++ b/model/haskell/typing-rules.tex
@@ -105,7 +105,7 @@
 % Null
 \frac
 {\judeh{\env}{\varexph}{\tylist{\vartyh}}}
-{\judeh{\env}{\expnull{\varexph}}{\tynum}}
+{\judeh{\env}{\exppnull{\varexph}}{\tynum}}
 \]
 \[
 % If0
