--- a/model/ml/grammar.tex
+++ b/model/ml/grammar.tex
@@ -4,7 +4,7 @@
 
 \varexpm & $=$ & \varvarm $|$ \varvalum $|$ \expfapp{\varexpm}{\varexpm} $|$ \exptapp{\varexpm}{\vartym} $|$ \expfix{\varexpm} $|$ \expop{\varexpm}{\varexpm} $|$ \expif{\varexpm}{\varexpm}{\varexpm} \\
 
-&& \expcons{\varexpm}{\varexpm} $|$ \expfield{\varexpm} $|$ \expnull{\varexpm} $|$ \expwrongs{\vartym}{\formvar{string}} $|$ \expms{\vartym}{\varexps} \\
+&& \expcons{\varexpm}{\varexpm} $|$ \expfield{\varexpm} $|$ \exppnull{\varexpm} $|$ \expwrongs{\vartym}{\formvar{string}} $|$ \expms{\vartym}{\varexps} \\
 
 \varvalum & $=$ & \varvalfm $|$ \expmh{\vartym}{\varexph} \\
 
@@ -22,7 +22,7 @@
 
 \varconum & $=$ & \symholem $|$ \expfapp{\varconfm}{\varexpm} $|$ \expfapp{\varvalfm}{\varconum} $|$ \exptapp{\varconfm}{\vartym} $|$ \expfix{\varconfm} $|$ \expop{\varconfm}{\varexpm} $|$ \expop{\varvalfm}{\varconfm} \\
 
-&& \expif{\varconfm}{\varexpm}{\varexpm} $|$ \expcons{\varconum}{\varexpm} $|$ \expcons{\varvalum}{\varconum} $|$ \expfield{\varconfm} $|$ \expnull{\varconfm} \\
+&& \expif{\varconfm}{\varexpm}{\varexpm} $|$ \expcons{\varconum}{\varexpm} $|$ \expcons{\varvalum}{\varconum} $|$ \expfield{\varconfm} $|$ \exppnull{\varconfm} \\
 
 && \expms{\vartym}{\varconfs}
 
