--- a/model/ml/operational-semantics/scheme.tex
+++ b/model/ml/operational-semantics/scheme.tex
@@ -12,7 +12,8 @@
 
 \redrulem
 {\expms{\tynum}{\varvalus}}
-{\expwrongs{\tynum}{\str{Not \; a \; number}}} $(\varvalus \neq \expnum{\varnum})$ \\
+{\expwrongs{\tynum}{\str{Not \; a \; number}}}
+$(\varvalus \neq \expnum{\varnum})$ \\
 
 % ms [t] nil
 
@@ -44,7 +45,8 @@
 
 \redrulem
 {\expms{(\tylabel{\vartym}{\tyvarm})}{\varvalus}}
-{\expwrongs{\vartym}{\str{Parametricity \; violated}}} $(\varvalus \neq \expsm{(\tylabel{\vartym}{\tyvarm})}{\varexpm})$ \\
+{\expwrongs{\vartym}{\str{Parametricity \; violated}}}
+$(\varvalus \neq \expsm{(\tylabel{\vartym}{\tyvarm})}{\varexpm})$ \\
 
 % ms (t->t) (\x.e)
 
