--- a/model/ml/typing-rules.tex
+++ b/model/ml/typing-rules.tex
@@ -105,7 +105,7 @@
 % Null
 \frac
 {\judem{\env}{\varexpm}{\tylist{\vartym}}}
-{\judem{\env}{\expnull{\varexpm}}{\tynum}}
+{\judem{\env}{\exppnull{\varexpm}}{\tynum}}
 \]
 \[
 % If0
