Added the color package, but haven't used it yet. Weird formatting issues with it in the macros. New notes, todos.

--- a/thesis.tex
+++ b/thesis.tex
@@ -36,6 +36,7 @@
 \usepackage[overload]{textcase}
 \usepackage{array}
 \usepackage{xspace}
+\usepackage{color}
 \newtheorem{theorem}{Theorem}
 \newtheorem{lemma}{Lemma}
 \newtheorem{case}{Case}[theorem]
