New notes. Revised the hm/mh macros to have a second type. Revised the HM op sem to use the new HM syntax. Made other review changes to H grammar, typing rules, and HM op sem. Added today's time.

--- a/macros.tex
+++ b/macros.tex
@@ -108,9 +108,9 @@
 \newcommand{\exppnull}[1]{\ensuremath{\formsym{\sympnull} \; #1}}
 \newcommand{\expwrongs}[2]{\ensuremath{\formsym{\symwrong} \; #1 \; #2}}
 \newcommand{\expwrongd}[1]{\ensuremath{\formsym{\symwrong} \; #1}}
-\newcommand{\exphm}[2]{\ensuremath{\formsym{\symhm} \; #1 \; #2}}
+\newcommand{\exphm}[3]{\ensuremath{\formsym{\symhm} \; #1 \; #2 \; #3}}
 \newcommand{\exphs}[2]{\ensuremath{\formsym{\symhs} \; #1 \; #2}}
-\newcommand{\expmh}[2]{\ensuremath{\formsym{\symmh} \; #1 \; #2}}
+\newcommand{\expmh}[3]{\ensuremath{\formsym{\symmh} \; #1 \; #2 \; #3}}
 \newcommand{\expms}[2]{\ensuremath{\formsym{\symms} \; #1 \; #2}}
 \newcommand{\expsh}[2]{\ensuremath{\formsym{\symsh} \; #1 \; #2}}
 \newcommand{\expsm}[2]{\ensuremath{\formsym{\symsm} \; #1 \; #2}}
