--- a/model/ml/grammar.tex
+++ b/model/ml/grammar.tex
@@ -6,7 +6,7 @@
 
 && \expcons{\varexpm}{\varexpm} $|$ \expfield{\varexpm} $|$ \exppnull{\varexpm} $|$ \expwrongs{\vartym}{\formvar{string}} $|$ \expms{\vartym}{\varexps} \\
 
-\varvalum & $=$ & \varvalfm $|$ \expmh{\vartym}{\varexph} \\
+\varvalum & $=$ & \varvalfm $|$ \expmh{\vartym}{\vartyh}{\varexph} \\
 
 \varvalfm & $=$ & \expfabss{\varvarm}{\vartym}{\varexpm} $|$ \exptabs{\tyvarm}{\varexpm} $|$ \expnum{\varnum} $|$ \expnils{\vartym} $|$ \expcons{\varvalum}{\varvalum} $|$ \expms{\tylump}{\varvalus} \\
 
@@ -18,7 +18,7 @@
 
 \formvar{\symfield} & $=$ & \formsym{\symhd} $|$ \formsym{\symtl} \\
 
-\varconfm & $=$ & \varconum $|$ \expmh{\vartym}{\varconfh} \\
+\varconfm & $=$ & \varconum $|$ \expmh{\vartym}{\vartyh}{\varconfh} \\
 
 \varconum & $=$ & \symholem $|$ \expfapp{\varconfm}{\varexpm} $|$ \expfapp{\varvalfm}{\varconum} $|$ \exptapp{\varconfm}{\vartym} $|$ \expfix{\varconfm} $|$ \expop{\varconfm}{\varexpm} $|$ \expop{\varvalfm}{\varconfm} \\
 
